log
Wed 04 Oct 2023 10:47:57 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:24: error: comparison between pointer and integer [-Werror]
   58 |       if(n->sudo[i][k] == NULL) {
      |                        ^~
cc1: all warnings being treated as errors
Compilation failed
024d9d8
